Criação - Modificando o script de criação de relatorio

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,8 @@ services:
     container_name: relatorio-export-api
     ports:
       - "5000:5000"
-    environment:
-      - DB_HOST=mysql-container
-      - DB_USER=teste
-      - DB_PASS=urubu100
-      - DB_NAME=Timesync
-      - FLASK_ENV=production
+    env_file:
+      - .env
     networks:
       - relatorio-network
 
