Criação - Modificando o acesos ao banco de dados

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
-DB_HOST=HOST
+DB_HOST=host.docker.internal
+DB_PORT=3306
 DB_USER=USER
 DB_PASS=PASS
-DB_NAME=NAME
-FLASK_ENV=development
+DB_NAME=Timesync
+FLASK_ENV=production
