--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - .env
     networks:
       - relatorio-network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   relatorio-network:
